# aileron

./: .gitignore  CAPABILITY_MATRIX.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTRUCTION_VERSIONS.md  PKGBUILD  README.md  STANDARD_CONFLICTS.md  TRACEABILITY_MATRIX.md  VERSION.md  com.github.WyattAu.aileron.yaml  flake.nix  init_discussions.md  init_requirements.md  init_tech_stack.md
.adrs/: ADR-001-servo-embedder-api-risk.md  ADR-002-multi-engine-architecture.md  ADR-003-offscreen-webview-rendering.md  ADR-004-native-terminal-emulator.md  ADR-005-architecture-d-servo-webkitgtk-hybrid.md  TEMPLATE.md  adr-002-servo-revisit.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.specs/00_requirements/: acceptance_criteria.md  applicable_standards.md  capability_requirements.md  domain_analysis.md  requirements.md  stakeholder_analysis.md
.specs/01_research/: YP-FUZZY-MATCH-001.md  YP-GFX-COMPOSITE-001.md  YP-INPUT-MODES-001.md  YP-MCP-PROTOCOL-001.md  YP-NET-ADBLOCK-001.md  YP-WM-BSP-001.md  gap_analysis_v1.md  gap_analysis_v2.md  yellow_paper_registry.toml
.specs/01_research/domain_constraints/: domain_constraints_gfx.toml  domain_constraints_input.toml  domain_constraints_wm.toml
.specs/01_research/test_vectors/: test_vectors_adblock.toml  test_vectors_bsp.toml  test_vectors_fuzzy.toml  test_vectors_gfx.toml  test_vectors_mcp.toml  test_vectors_modes.toml
.specs/02_architecture/: BP-APP-CORE-001.md  BP-GFX-COMPOSITOR-001.md  BP-INPUT-ROUTER-001.md  BP-WM-TILING-001.md  arp_protocol_spec.md  blue_paper_registry.toml  mobile_architecture.md  servo_embedder_evaluation.md  servo_pane_design.md  sync_protocol_design.md  webextensions_api_design.md
.specs/02_architecture/interface_contracts/: interface_input.toml  interface_wm.toml
.specs/02_architecture/proofs/: Aileron.lean  lake-manifest.json  lakefile.lean  proof_bsp.lean  proof_modes.lean
.specs/02_architecture/proofs/Aileron/BSP/: ProofBSP.lean
.specs/02_architecture/proofs/Aileron/Input/: ProofModes.lean
.specs/03_security/: security_test_plan.md  threat_model.md
.specs/04_performance/: benchmark_suite.md  nvidia_wayland_audit.md  performance_requirements.md
.specs/05_branding/: mobile_ui_design.md
.specs/08_roadmap/: master_plan.toml  master_plan_v2.toml  master_plan_v3.toml  master_plan_v4.toml  master_plan_v5.toml  master_plan_v6.toml  master_plan_v7.toml
.specs/09_compliance/: compliance_matrix.md
benches/: benchmarks.rs
docs/: extension-api.md  index.html  lua-scripting.md
examples/scripts/: README.md  dark-mode.lua  redirector.lua  wide-github.lua
man/: aileron.1
resources/: aileron.desktop
src/: bootstrap.rs  config.rs  debug_capturer.rs  frame_tasks.rs  git.rs  lib.rs  main.rs  offscreen_webview.rs  popup.rs  scripts.rs  workspace_restore.rs  wry_actions.rs
src/app/: commands.rs  dispatch.rs  events.rs  mod.rs  omnibox.rs  palette.rs
src/app/cmd/: import.rs  mod.rs  settings.rs  sync.rs  util.rs
src/arp/: commands.rs  mod.rs  server.rs
src/db/: bookmarks.rs  downloads.rs  history.rs  mod.rs  quickmarks.rs  scroll_marks.rs  site_settings.rs  tab_names.rs  workspaces.rs
src/downloads/: mod.rs
src/extensions/: api.rs  builtin_adblock.rs  impls.rs  loader.rs  manifest.rs  message_bus.rs  mod.rs  permissions.rs  runtime.rs  scripting.rs  storage.rs  tabs.rs  types.rs  web_request.rs
src/gfx/: mod.rs  renderer.rs
src/i18n/: loader.rs  mod.rs
src/i18n/locales/: de.toml  en.toml  es.toml  fr.toml  ja.toml  ko.toml  pt.toml  ru.toml  zh.toml
src/input/: keybindings.rs  keymap.rs  mod.rs  mode.rs  router.rs
src/lua/: api.rs  mod.rs  sandbox.rs
src/mcp/: bridge.rs  mod.rs  server.rs  tools.rs  transport.rs
src/net/: adblock.rs  filter_list.rs  mod.rs  privacy.rs
src/passwords/: bitwarden.rs  keyring.rs  mod.rs
src/platform/: config.rs  linux.rs  macos.rs  mod.rs  paths.rs  traits.rs  windows.rs
src/profiling/: memory.rs  mod.rs
src/servo/: engine.rs  engine_selection.rs  fallback.rs  mod.rs  servo_engine.rs  texture_share.rs  wry_engine.rs
src/sync/: core.rs  crypto.rs  mod.rs  transport.rs  watcher.rs
src/terminal/: grid.rs  mod.rs  pty.rs  render.rs
src/ui/: mod.rs  palette.rs  panels.rs  search.rs
src/wm/: mod.rs  pane.rs  rect.rs  tree.rs
tests/: integration_smoke.rs  offscreen_render_test.rs  startup_test.rs
