[package]
name = "aileron"
version = "0.18.0"
edition = "2024"
description = "A blazingly fast, keyboard-driven web environment for developers"
license = "MIT"

[dependencies]
# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Async runtime
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "io-util", "fs"] }

# WebSocket server (for ARP mobile protocol)
tokio-tungstenite = "0.26"

# Concurrency
crossbeam-channel = "0.5.15"
parking_lot = "0.12"

# Graphics
wgpu = "24.0.5"
winit = "0.30.8"
egui = "0.31.1"
egui-wgpu = "0.31.1"
egui-winit = "0.31.1"

# Fuzzy matching
nucleo = "0.5.0"

# Database
rusqlite = { version = "0.32.1", features = ["bundled", "backup"] }

fastcdc = "4.0"
blake3 = "1.8"
notify = { version = "8.2", features = ["crossbeam-channel"] }
notify-debouncer-mini = { version = "0.7", features = ["crossbeam-channel"] }
age = { version = "0.11", features = ["armor"] }

# Lua scripting
mlua = { version = "0.10.3", features = ["lua54", "vendored"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Filesystem paths
directories = "6.0.0"

# URL parsing
url = "2.5.4"

# URL encoding
urlencoding = "2"

# Small string type (used by winit's Key::Character)
smol_str = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"

# System browser fallback
open = "5.3.2"

# Crypto-safe credential handling
zeroize = { version = "1.8.1", features = ["derive"] }

# UUID generation
uuid = { version = "1.16.0", features = ["v4"] }

# Async block-on for wgpu init
pollster = "0.4.0"

# PTY management for embedded terminal panes
portable-pty = "0.8"

# Terminal emulation (VT parser + grid state)
alacritty_terminal = "0.26"

# WebView engine (wry = Tauri's system WebView wrapper)
wry = { version = "0.55.0", default-features = false, features = [
  "os-webview",
  "protocol",
  "devtools",
  "x11",
] }

# HTTP client (for downloading filter/privacy lists)
attohttpc = "0.28"

# HTTP client with streaming (for download manager)
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls"] }
futures-util = "0.3"

# Regex (for site settings pattern matching)
regex = "1"

# Aho-Corasick automaton for fast multi-pattern string matching
aho-corasick = "1"

# Image encoding (for MCP screenshot tool)
image = { version = "0.25", default-features = false, features = ["png"] }

# Base64 encoding (for MCP screenshot tool)
base64 = "0.22"

# System keyring for credential storage
keyring = "3"

# GTK + WebKitGTK (required by wry on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
x11-dl = "2"
glib-sys = "0.20"
# Direct webkit2gtk dependency for snapshot() API (captures GL-composited content).
# Pinned to match wry 0.55's internal version so glib/cairo types unify.
webkit2gtk = { version = "=2.0.2", features = ["v2_38"] }
cairo-rs = "0.18"

[dev-dependencies]
# Testing
tempfile = "3.19.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
